fix margin issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,7 @@ img {
         width: 100%;
         min-height: 40%;
         border-radius: 0 0 3rem 3rem;
+        margin-top: 0;
     }
 
     .secondNumber {
